update dashboard page and refactor related code